# Qt-Tutorial

./: README.md
QT_TUTORIAL_4/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
QT_TUTORIAL_5_Buiding_Blocks/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
